--- a/ESTILOS/DIRECCION.CSS
+++ b/ESTILOS/DIRECCION.CSS
@@ -45,4 +45,29 @@ PRE {
 #mapa {
   display: flex;
   justify-content: center;
+}
+
+@media screen and (max-width: 576px) {
+  .navbar-nav {
+    flex-direction: column;
+  }
+  .navbar-nav .nav-item {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 577px) and (max-width: 992px) {
+  .navbar-nav {
+    flex-direction: row;
+  }
+  .navbar-nav .nav-item {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 993px) {
+  .navbar-nav {
+    flex-direction: row;
+  }
+  .navbar-nav .nav-item {
+    text-align: center;
+  }
 }/*# sourceMappingURL=DIRECCION.css.map */
