--- a/ESTILOS/NOSOTROS.CSS
+++ b/ESTILOS/NOSOTROS.CSS
@@ -40,4 +40,29 @@ pre {
   overflow-wrap: break-word;
   margin-top: 4%;
   font-size: 20px;
+}
+
+@media screen and (max-width: 576px) {
+  .navbar-nav {
+    flex-direction: column;
+  }
+  .navbar-nav .nav-item {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 577px) and (max-width: 992px) {
+  .navbar-nav {
+    flex-direction: row;
+  }
+  .navbar-nav .nav-item {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 993px) {
+  .navbar-nav {
+    flex-direction: row;
+  }
+  .navbar-nav .nav-item {
+    text-align: center;
+  }
 }/*# sourceMappingURL=NOSOTROS.css.map */
