--- a/ESTILOS.CSS
+++ b/ESTILOS.CSS
@@ -43,4 +43,29 @@ h2 {
 
 body {
   background-color: gray;
+}
+
+@media screen and (max-width: 576px) {
+  .navbar-nav {
+    flex-direction: column;
+  }
+  .navbar-nav .nav-item {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 577px) and (max-width: 992px) {
+  .navbar-nav {
+    flex-direction: row;
+  }
+  .navbar-nav .nav-item {
+    text-align: center;
+  }
+}
+@media screen and (min-width: 993px) {
+  .navbar-nav {
+    flex-direction: row;
+  }
+  .navbar-nav .nav-item {
+    text-align: center;
+  }
 }/*# sourceMappingURL=ESTILOS.css.map */
