--- a/ESTILOS/_PRINCIPALES.SCSS
+++ b/ESTILOS/_PRINCIPALES.SCSS
@@ -19,27 +19,49 @@ $fondo1: #ccc;
 }
 
 @mixin media{
-    @media only screen and (max-width: 768px) {
-        .container {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 20px;
+    @media (max-width: 576px) {
+ 
+        .navbar-nav {
+            flex-direction: column;
+        }
+        .navbar-nav .nav-item {
+            text-align: center;
         }
     }
     
-    @media only screen and (min-width: 769px) and (max-width: 992px) {
-        .container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-gap: 20px;
+    
+    @media (min-width: 577px) and (max-width: 992px) {
+        .navbar-nav {
+            flex-direction: row;
+        }
+        .navbar-nav .nav-item {
+            text-align: center;
         }
     }
     
-    @media only screen and (min-width: 993px) {
+    
+    @media (min-width: 993px) {
+        .navbar-nav {
+            flex-direction: row;
+        }
+        .navbar-nav .nav-item {
+            text-align: center;
+        }
+    }
+}
+
+@mixin grid{
+    @media screen and (max-width: 1200px) {
         .container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-gap: 20px;
+            grid-template-columns: 1fr 1fr;
+            grid-template-areas: "redes redes";
+        }
+    }
+    
+    @media screen and (max-width: 768px) {
+        .container {
+            grid-template-columns: 1fr;
+            grid-template-areas: "redes";
         }
     }
 }
