--- a/ESTILOS/CONTACTO.CSS
+++ b/ESTILOS/CONTACTO.CSS
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
-/* INICIO DE NAV */
 .navbar-brand {
   font-size: 50px;
 }
@@ -12,7 +11,7 @@
 .nav-link:hover {
   color: gold;
   transition: all 0.9s;
-  transform: scale(1.2);
+  transform: scale(1.1);
 }
 
 span {
@@ -24,7 +23,6 @@ nav {
   font-size: 20px;
 }
 
-/* FIN DE NAV */
 body {
   background-color: #ccc;
 }
@@ -55,8 +53,8 @@ a {
   color: rgb(255, 217, 0);
 }
 
-@media screen and (max-width: 576px) {
-  .navbar-nav {
+@media screen and (max-width: 1180px) {
+  .navbar-collapsibleNavbar {
     flex-direction: column;
   }
   .navbar-nav .nav-item {
