--- a/ESTILOS/NOSOTROS.CSS
+++ b/ESTILOS/NOSOTROS.CSS
@@ -1,6 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
-/* INICIO DE NAV */
 .navbar-brand {
   font-size: 50px;
 }
@@ -24,12 +23,13 @@ nav {
   font-size: 20px;
 }
 
-/* FIN DE NAV */
 body {
   background-color: #ccc;
 }
 
 h1 {
+  font-size: 280%;
+  margin-top: 3%;
   font-family: "Archivo Black", "archivo-black";
 }
 
@@ -42,8 +42,8 @@ pre {
   font-size: 20px;
 }
 
-@media screen and (max-width: 576px) {
-  .navbar-nav {
+@media screen and (max-width: 1180px) {
+  .navbar-collapsibleNavbar {
     flex-direction: column;
   }
   .navbar-nav .nav-item {
