--- a/ESTILOS/NOSOTROS.SCSS
+++ b/ESTILOS/NOSOTROS.SCSS
@@ -1,28 +1,13 @@
 @import"PRINCIPALES";
-/* INICIO DE NAV */
-.navbar-brand{
-    font-size: 50px;
-}
-.container-fluid{
-    font-size: 40px;
-}
-.nav-link:hover{
-    color: gold;
-    transition: all 0.9s;
-    transform: scale(1.1);
-}
-span{
-    color: gold;
-}
-nav{
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
-}
-/* FIN DE NAV */
+
+@include nav;
+
 body{
     background-color: $fondo1;
 }
 h1{
+    font-size: 280%;
+    margin-top: 3%;
     font-family: $font1;
 }
 
