--- a/ESTILOS/ENVIOS.CSS
+++ b/ESTILOS/ENVIOS.CSS
@@ -28,7 +28,16 @@ body {
 }
 
 h1 {
+  font-size: 280%;
   font-family: "Archivo Black", "archivo-black";
+}
+
+.redes {
+  font-size: 40px;
+}
+
+a {
+  color: rgb(255, 217, 0);
 }
 
 pre {
@@ -38,29 +47,4 @@ pre {
   overflow-wrap: break-word;
   margin-top: 4%;
   font-size: 20px;
-}
-
-@media screen and (max-width: 1180px) {
-  .navbar-collapsibleNavbar {
-    flex-direction: column;
-  }
-  .navbar-nav .nav-item {
-    text-align: center;
-  }
-}
-@media screen and (min-width: 577px) and (max-width: 992px) {
-  .navbar-nav {
-    flex-direction: row;
-  }
-  .navbar-nav .nav-item {
-    text-align: center;
-  }
-}
-@media screen and (min-width: 993px) {
-  .navbar-nav {
-    flex-direction: row;
-  }
-  .navbar-nav .nav-item {
-    text-align: center;
-  }
 }/*# sourceMappingURL=envios.css.map */
