--- a/ESTILOS/ENVIOS.SCSS
+++ b/ESTILOS/ENVIOS.SCSS
@@ -6,12 +6,15 @@ body{
 }
 
 h1{
+    font-size: 280%;
     font-family: $font1
+}
+.redes{
+    font-size: 40px;
+}
+a{
+    color: rgb(255, 217, 0);
 }
 pre{
     @include pre
-}
-
-@media screen{
-    @include media;
 }
