--- a/ESTILOS/NOSOTROS.SCSS
+++ b/ESTILOS/NOSOTROS.SCSS
@@ -10,11 +10,11 @@ h1{
     margin-top: 3%;
     font-family: $font1;
 }
-
+h2{
+    font-size: 280%;
+    margin-top: 3%;
+    font-family: $font1
+}
 pre{
     @include pre
-}
-
-@media screen{
-    @include media;
 }
