--- a/estilos.scss
+++ b/estilos.scss
@@ -27,6 +27,12 @@ body{
     height: auto;
     width: 100vh;
 }
+.card-img-top{
+    display: grid;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+}
 
 @media screen and (max-width: 600px) {
     .card{
