--- a/estilos.css
+++ b/estilos.css
@@ -47,12 +47,13 @@ body {
   margin: 10%;
   height: auto;
   width: 100vh;
+  background-color: #ccc;
 }
 
 .card-img-top {
   margin-left: auto;
   margin-right: auto;
-  width: 200px;
+  width: 400px;
 }
 
 @media screen and (max-width: 600px) {
@@ -60,10 +61,23 @@ body {
     width: 300px;
     height: auto;
   }
+  .card-img-top {
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+  }
+  .carousel {
+    height: auto;
+    align-items: center;
+  }
 }
 @media screen and (min-width: 600px) and (max-width: 1200px) {
+  .carousel {
+    height: auto;
+    align-items: center;
+  }
   .card {
-    width: 600px;
+    width: auto;
     height: auto;
   }
 }/*# sourceMappingURL=estilos.css.map */
